# git-vbranch

./: .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml
.github/scripts/: update-floating-tags.sh
.github/workflows/: ci.yml  publish-assets.yml  release.yml
src/: cli.rs  display.rs  error.rs  git.rs  label.rs  main.rs  remote.rs
src/ci/: bitbucket.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
