[package]
name = "git-vbranch"
version = "1.0.0"
edition = "2021"
description = "Virtual branches for Git: group PRs/MRs by label and materialize them as a single merged state."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
regex = "1"
